@@ -1,26 +1,9 @@
 #!/bin/sh
 set -e
 
-cat << LICENSE_ACK
-
-# ========================================================================================= #
-# Gluu License Agreement: https://github.com/GluuFederation/gluu-docker/blob/3.1.5/LICENSE. #
-# The use of Gluu Server Docker Edition is subject to the Gluu Support License.             #
-# ========================================================================================= #
-
-LICENSE_ACK
-
-import_ssl_cert() {
-    if [ -f /etc/certs/gluu_https.crt ]; then
-        openssl x509 -outform der -in /etc/certs/gluu_https.crt -out /etc/certs/gluu_https.der
-        keytool -importcert -trustcacerts \
-            -alias gluu_https \
-            -file /etc/certs/gluu_https.der \
-            -keystore /usr/lib/jvm/default-jvm/jre/lib/security/cacerts \
-            -storepass changeit \
-            -noprompt
-    fi
-}
+# =========
+# FUNCTIONS
+# =========
 
 pull_shared_shib_files() {
     mkdir -p $GLUU_SHIB_TARGET_DIR $GLUU_SHIB_SOURCE_DIR
@@ -29,38 +12,42 @@ pull_shared_shib_files() {
     fi
 }
 
-if [ -f /etc/redhat-release ]; then
-    source scl_source enable ptyhon27 && python /opt/scripts/wait_for.py --deps="config,secret,ldap"
-else
-    python /opt/scripts/wait_for.py --deps="config,secret,ldap"
-fi
+run_wait() {
+    python /app/scripts/wait.py
+}
 
-if [ ! -f /deploy/touched ]; then
-    if [ -f /touched ]; then
-        # backward-compat
-        mv /touched /deploy/touched
-    else
-        if [ -f /etc/redhat-release ]; then
-            source scl_source enable ptyhon27 && python /opt/scripts/entrypoint.py
-        else
-            python /opt/scripts/entrypoint.py
-        fi
-
-        import_ssl_cert
-        pull_shared_shib_files
+run_entrypoint() {
+    if [ ! -f /deploy/touched ]; then
+        python /app/scripts/entrypoint.py
         touch /deploy/touched
     fi
+    pull_shared_shib_files
+}
+
+# ==========
+# ENTRYPOINT
+# ==========
+
+if [ -f /etc/redhat-release ]; then
+    source scl_source enable python27 && run_wait
+    source scl_source enable python27 && run_entrypoint
+else
+    run_wait
+    run_entrypoint
 fi
 
 # monitor filesystem changes in Shibboleth-related files
-sh /opt/scripts/shibwatcher.sh &
+sh /app/scripts/shibwatcher.sh &
 
 cd /opt/gluu/jetty/idp
-exec java -jar /opt/jetty/start.jar \
+exec java \
     -server \
+    -XX:MaxGCPauseMillis=400 \
+    -XX:+UseParallelGC \
     -XX:+DisableExplicitGC \
-    -XX:+UnlockExperimentalVMOptions \
-    -XX:+UseCGroupMemoryLimitForHeap \
-    -XX:MaxRAMFraction=$GLUU_MAX_RAM_FRACTION \
+    -XX:+UseContainerSupport \
+    -XX:MaxRAMPercentage=$GLUU_MAX_RAM_PERCENTAGE \
     -Dgluu.base=/etc/gluu \
-    -Dserver.base=/opt/gluu/jetty/idp
+    -Dserver.base=/opt/gluu/jetty/idp \
+    -Dorg.ldaptive.provider=org.ldaptive.provider.unboundid.UnboundIDProvider \
+    -jar /opt/jetty/start.jar
